    - When {page} is not specified, up to 10 transactions will be shown.
    - Does not persist across reloads, stop and starts.
  - New Commands:
    - /town bankhistory {pages}
    - /nation bankhistory {pages}
    - /ta town {townname} bankhistory {pages}
    - /ta nation {nationname} bankhistory {pages}
  - New permission nodes:
    - towny.commmand.town.bankhistory
      - child node of towny.command.town.*
    - towny.command.nation.bankhistory
      - child node of towny.command.nation.*
    - towny.command.townyadmin.town.bankhistory
      - child node of towny.command.townyadmin.town.*
    - towny.command.townyadmin.nation.bankhistory
      - child node of towny.command.townyadmin.nation.*
  - Add save method to Towny objects, courtesy of silverwolfg11 with PR #4670.
0.96.5.14:
  - Added Placeholder: %townyadvanced_nation_map_color_hex%, courtesy of Kovalskki with PR #4661.
    - returns the hex colour code of the nation's mapcolor set with /t set mapcolor (seen in dynmap-towny.)
  - es-419.yml updated to 0.97, courtesy of EuGNosii with PR #4675.
  - Fix friendly-fire-disabled message not being sent via TownyMessaging.
  - Fix PreNationEvent cancellation message, courtesy of Warriorrrr with PR #4676.
  - Fix [Not For Sale] being seen when walking into the wilderness from a forsale plot.
  - Fix renamed nations not accepting valid names when there is no cost to change the name.
  - Fix explosive crossbow damage not being considered pvp.
  - Replace calls to TownySettings.isUsingEconomy() with TownyEconomyHandler.isActive().
    - Should stop errors appearing when the economy on the server is not set up properly.
0.96.5.15:
  - API: add cancellationMsg to PlotToggleEvents.
  - Add PVP cooldown to setting and unsetting the Arena plot type.
  - Add tab-completion to /t add.
    - Tab-completion shows only online, town-less players.
    - Closes #4674.
  - Fix health regen task not healing.
    - Closes #4682.